fix: fix styles when content truncate

--- a/src/components/Badge/styles.scss
+++ b/src/components/Badge/styles.scss
@@ -10,7 +10,9 @@
     border: 1px solid $border-color;
 }
 
-%common-styles {
+.rainbow-badge {
+    @include colors($color-gray-4, $color-gray-2);
+
     display: -ms-inline-flexbox;
     display: inline-flex;
     -ms-flex-pack: center;
@@ -19,13 +21,6 @@
     align-content: center;
     -ms-flex-align: center;
     align-items: center;
-}
-
-.rainbow-badge {
-    @include colors($color-gray-4, $color-gray-2);
-
-    @extend %common-styles;
-
     font-size: $font-size-text-small;
     line-height: normal;
     text-transform: uppercase;
@@ -56,8 +51,6 @@
 }
 
 .rainbow-badge_content--truncate {
-    @extend %common-styles;
-
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
